fix alignment

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,20 +1,20 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-.techBody{
+.techBody {
   height: 100%;
-  height: fit-content;
-  gap: 5px;
+  /* height: fit-content; */
+  /* gap: 5px; */
 }
 
 .chairBtn {
@@ -23,15 +23,20 @@ code {
 }
 
 .detailCard {
-  justify-content: flex-end;
+  height: 100%;
 }
 .loginPage {
   height: 90vh;
 }
 .techChair {
-  height: 70vh;
+  height: 80vh;
+  /* border: 1px solid red; */
 }
 
 .techCard {
-  height: 78vh
+  height: 100%;
+}
+
+.techChairCard {
+  height: 100%;
 }
